redact (0.8.5); urgency=low;
  * Changed the variables that help parse the command line options from
    global storage to local storage inside main().
  * Removed some unneeded code that changed the version of the acct
    structure depending on platform.
  * Fixed the order of command line options in the help message.
  * Removed redundant code.
  * Updated the README.md file to reflect the current goals and remind
    potential users that the program is still in beta.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sun, 08 Apr 2018 12:16:54 -0500 

redact (0.8.4); urgency=medium;
  * Fixed a bug that when using the -a option to wipe all log files,
    the auth.log file was not wiped.
  * Removed old code that is no longer used.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sat, 31 Mar 2018 13:25:23 -0500

redact (0.8.3); urgency=low;
  * Minor code change to move the call to the bail function into the
    function that wipes process accounting logs.
  -- Bryan Hawkins <spcnvdrr@protonmail.com> Wed, 28 Mar 2018 21:51:47 -0500

redact (0.8.2); urgency=low;
  * Modified the wipe_utmp() function to improve code quality.
  * Added a new feature that when wiping either all logs (-a option)
    or the process accounting logs (-p option) the redact program name
    will NOT show up in the process accounting logs. This is done in
    the bail() function which is just a wrapper for the execl() function.
    This function replaces the redact program in memory with the echo
    program thus echo shows up in the log instead of redact.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sun, 25 Mar 2018 11:48:30 -0500

redact (0.8.1); urgency=low;
  * Fixed a minor bug in which some nodes were not correctly removed from
    the linked list causing the size of the list to grow larger than needed.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sat, 24 Mar 2018 15:10:44 -0500

redact (0.8.0); urgency=medium;
  * Completely re-wrote the loop in the wipe_utmp() function to handle